--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- نص توضيحي -->
         <p>يرجى إدخال اسم المستخم وكلمة المرور الخاصة بك لطلب حذف الحساب.</p>
         <form id="deleteAccountForm">
-            <label for="text">اسم المستخدم:</label>
+            <label for="text">اسم المستخدم (الايميل):</label>
             <input type="text" id="text" name="text" required placeholder="أدخل اسم المستخدم">
             
             <label for="password">كلمة المرور:</label>
